--- a/css/style.css
+++ b/css/style.css
@@ -47,11 +47,13 @@ body {
   top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
+  text-align: center;
 }
 
 .heading-primary {
   color: #fff;
   text-transform: uppercase;
+  backface-visibility: hidden;
 }
 
 .heading-primary-main {
@@ -59,7 +61,6 @@ body {
   font-size: 60px;
   font-weight: 400;
   letter-spacing: 35px;
-  backface-visibility: hidden;
 
   animation-name: moveInLeft;
   animation-duration: 2s;
@@ -72,7 +73,7 @@ body {
   font-weight: 700;
   letter-spacing: 17.4px;
 
-  animation: moveInRight 2s ease-out
+  animation: moveInRight 2s ease-out;
 }
 
 @keyframes moveInLeft {
@@ -91,8 +92,6 @@ body {
   }
 }
 
-
-
 @keyframes moveInRight {
   0% {
     opacity: 0;
@@ -107,4 +106,76 @@ body {
     opacity: 1;
     transform: translateX(0px);
   }
+}
+
+
+@keyframes moveInBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+
+
+.btn:link,
+.btn:visited {
+  text-transform: uppercase;
+  text-decoration: none;
+  padding: 15px 40px;
+  display: inline-block;
+  margin-top: 50px;
+  border-radius: 100px;
+  transition: all 0.2s;
+  position: relative;
+
+  
+}
+
+.btn:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+}
+
+.btn:active {
+  transform: translateY(-2px);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+}
+
+.btn-white {
+  background-color: #fff;
+  color: #777;
+}
+
+.btn::after {
+  content: "";
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  border-radius: 100px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transition: all 0.4s;
+}
+
+.btn-white::after {
+  background-color: #fff;
+}
+
+.btn:hover::after {
+  transform: scaleX(1.4) scaleY(1.6);
+  opacity: 0;
+}
+
+
+.btn-animated {
+  animation: moveInBottom 2s ease-out .75s;
+  animation-fill-mode: backwards;
+  /* animation-delay: 4s; */
 }
