--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,7 @@
 
 @import "components/button";
 
+@import "layout/grid";
 @import "layout/header";
 
 @import "pages/home";
@@ -21,6 +22,7 @@
 // Dark green: #28b485
 
 // */
+
 
 
 
