--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,4 +1,3 @@
-
 body {
   font-family: "Lato", sans-serif;
   font-weight: 400;
@@ -7,8 +6,6 @@ body {
   color: $color-grey;
   padding: 3rem;
 }
-
-
 
 .heading-primary {
   color: $color-white;
@@ -33,5 +30,27 @@ body {
     letter-spacing: 1.75rem;
 
     animation: moveInRight 2s ease-out;
+  }
+}
+
+.heading-secondary {
+  font-size: 3.5rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  background-image: linear-gradient(
+    to right,
+    $color-primary-light,
+    $color-primary-dark
+  );
+  display: inline-block;
+  -webkit-background-clip: text;
+  color: transparent;
+  transition: all .2s;
+  letter-spacing: .2rem;
+
+
+  &:hover {
+    transform: skewY(2deg) skewX(15deg) scale(1.1);
+    text-shadow: .5rem 1rem 2rem rgba($color-black, .2);
   }
 }
