complete popular tours section

--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -36,6 +36,15 @@
     }
   }
 
+  &--green {
+    background-color: $color-primary;
+    color: $color-white;
+
+    &::after {
+      background-color: $color-primary-dark;
+    }
+  }
+
   &::after {
     content: "";
     display: inline-block;
@@ -82,3 +91,4 @@
     transform: translateY(0);
   }
 }
+
