--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,8 +8,11 @@
 @import "base/utility";
 
 @import "components/button";
+@import "components/card";
 @import "components/composition";
 @import "components/feature-box";
+
+
 
 @import "layout/grid";
 @import "layout/header";
